--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <p class="contact-info">
                 <a href="tel:+918002887706" class="fa fa-phone"></a> +91-8002887706 &nbsp;
                 <a href="mailto:mshubham0309@gmail.com" class="fa fa-envelope"></a> <a href="mailto:mshubham0309@gmail.com">mshubham0309@gmail.com</a> &nbsp;
-                <a href="https://www.linkedin.com/in/imshubhamkumar/" class="fa fa-linkedin linkedin"></a> <a href="https://www.linkedin.com/in/imshubhamkumar/">imshubhamkumar</a> &nbsp;
-                <a href="https://github.com/ishubhamkr" class="fa fa-github github"></a> <a href="https://github.com/ishubhamkr">ishubhamkr</a> &nbsp;
+                <a href="https://www.linkedin.com/in/imshubhamkumar/" class="fab fa-linkedin"></a> <a href="https://www.linkedin.com/in/imshubhamkumar/">imshubhamkumar</a> &nbsp;
+                <a href="https://github.com/ishubhamkr" class="fab fa-github"></a> <a href="https://github.com/ishubhamkr">ishubhamkr</a> &nbsp;
                 <span class="fa fa-map-marker"></span> Noida, UP, India
             </p>
         </header>
