--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                 <a href="https://www.linkedin.com/in/imshubhamkumar/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a> |  
                 <a href="https://github.com/ishubhamkr" target="_blank"><i class="fab fa-github"></i> GitHub</a> |  
                 <a href="https://www.hackerrank.com/profile/_mshubham" target="_blank"><i class="fab fa-hackerrank"></i> Hackerrank</a> |
+                <a href="https://raw.githubusercontent.com/ishubhamkr/Resume/refs/heads/main/Shubham_Resume.pdf" target="_blank"><i class="fab fa-Resume"></i> Download Resume</a> |
                 <span><i class="fas fa-map-marker-alt"></i> Noida, UP, India</span>  
             </div>  
         </div>  
