--- a/index.html
+++ b/index.html
@@ -821,12 +821,15 @@
                 <div class="job">    
                     <h3>Software Engineer <span><i class="fas fa-calendar-alt"></i> July 2022 – Present</span></h3>    
                     <div class="job-details"><i class="fas fa-map-marker-alt"></i> Optum Global Solutions (UHG) | Noida, Uttar Pradesh, India</div>    
-                    <ul>    
-                        <li>Enhanced API performance and developed scalable Kafka and REST APIs for the Provider Portal at UnitedHealth Group (UHG), optimizing access and user management processes.</li>    
-                        <li>Resolved over 200 critical incidents using ServiceNow, ensuring seamless operations and strengthening the security posture for providers.</li>    
-                        <li>Developed the Digital Security Helpdesk Portal, mitigating security vulnerabilities through the utilization of CodeQL and WhiteHat Sentinel tools.</li>    
-                        <li>Designed and implemented a user control UI with React and Abyss components, ensuring application consistency and increasing code coverage to 98% through comprehensive unit and integration testing with JUnit.</li>    
-                    </ul>    
+                    <ul>
+                        <li>Enhanced API performance by 15% by optimizing Kafka streams and refining RESTful architecture, reducing latency and boosting user throughput.</li>
+                        <li>Resolved 200+ high-priority incidents via ServiceNow, ensuring 99.9% uptime and strengthening security protocols.</li>
+                        <li>Developed and integrated frontend and backend APIs for the Digital Security Helpdesk Portal, reducing ticket resolution time by 25% and enhancing user satisfaction.</li>
+                        <li>Designed a scalable user management interface with React.js and Abyss, achieving 98% test coverage using JUnit.</li>
+                        <li>Automated database maintenance with cron jobs, reducing downtime by 10% and improving system stability.</li>
+                        <li>Mentored new joiners on the Provider Portal platform, improving onboarding efficiency and fostering cross-team collaboration.</li>
+                    </ul>
+    
                     <div class="tools-tech">    
                         <strong>Tools & Technologies:</strong> Java, Spring Boot, ReactJS, Abyss, GraphQL, JUnit, CodeQL, Splunk, Kibana, ServiceNow, MongoDB, Git, Jenkins, Kubernetes, JMeter    
                     </div>    
@@ -862,13 +865,10 @@
     
                     <div class="project-card">    
                         <div class="project-content">    
-                            <h3>Book Review Platform</h3>    
-                            <p><strong>Description:</strong> Built a full-stack web application that allows users to    
-                                browse, review, and rate books using Java Spring Boot, React.js, and MongoDB. Implemented    
-                                secure authentication, a robust review and rating system, personalized book    
-                                recommendations, and a responsive, user-friendly interface to boost engagement.</p>    
-                            <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot, React.js,    
-                                MongoDB, Spring Security, JWT, RESTful APIs, Axios, Swagger</div>    
+                            <h3Tax Calculation Service System</h3>    
+                            <p><strong>Description:</strong> Developed a comprehensive application enabling users to register, log in, and calculate their tax liabilities for the financial year.</p>    
+                            <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot,    
+                                MongoDB, Spring Security, JWT, RESTful APIs</div>    
                         </div>    
                     </div>    
                     <!-- Add more project cards as needed -->    
