--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             --secondary-color: #062b45;     
             --accent-color: #0fd78b;     
             --background-color: #ecf0f1;    
-            --text-color: #e1e9f1;    
+            --text-color: #000000;    
             --font-family: 'Roboto', sans-serif;    
             --heading-font: 'Poppins', sans-serif;    
             --transition-speed: 0.3s;    
