--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
     
                     <div class="project-card">    
                         <div class="project-content">    
-                            <h3Tax Calculation Service System</h3>    
+                            <h3>Tax Calculation Service System</h3>    
                             <p><strong>Description:</strong> Developed a comprehensive application enabling users to register, log in, and calculate their tax liabilities for the financial year.</p>    
                             <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot,    
                                 MongoDB, Spring Security, JWT, RESTful APIs</div>    
