--- a/index.html
+++ b/index.html
@@ -822,12 +822,11 @@
                     <h3>Software Engineer <span><i class="fas fa-calendar-alt"></i> July 2022 – Present</span></h3>    
                     <div class="job-details"><i class="fas fa-map-marker-alt"></i> Optum Global Solutions (UHG) | Noida, Uttar Pradesh, India</div>    
                     <ul>
-                        <li>Enhanced API performance by 15% by optimizing Kafka streams and refining RESTful architecture, reducing latency and boosting user throughput.</li>
-                        <li>Resolved 200+ high-priority incidents via ServiceNow, ensuring 99.9% uptime and strengthening security protocols.</li>
-                        <li>Developed and integrated frontend and backend APIs for the Digital Security Helpdesk Portal, reducing ticket resolution time by 25% and enhancing user satisfaction.</li>
-                        <li>Designed a scalable user management interface with React.js and Abyss, achieving 98% test coverage using JUnit.</li>
-                        <li>Automated database maintenance with cron jobs, reducing downtime by 10% and improving system stability.</li>
-                        <li>Mentored new joiners on the Provider Portal platform, improving onboarding efficiency and fostering cross-team collaboration.</li>
+                        <li>Enhanced API performance by 15\% through Kafka stream optimization and refinement of RESTful architecture, resulting in decreased latency and increased user throughput.</li>    
+                        <li>Resolved over 200 high-priority ServiceNow incidents, maintaining 99.9\% system uptime and strengthening security protocols within the Enhanced Provider Validation (EPV), Digital Security and Provider Helpdesk Portal.</li>
+                        <li>Engineered and integrated frontend and backend APIs for the Digital Security Helpdesk Portal using React.js, Abyss, and MongoDB, reducing ticket resolution time by 25\% and achieving 98\% test coverage with JUnit.</li>    
+                        <li>Implemented comprehensive production monitoring solutions utilizing Splunk, Kibana, NewRelic, and OpenLens, alongside automating database maintenance with cron jobs, which reduced downtime by 10\% and enhanced system stability.</li>  
+                        <li>Mentored new graduates and onboarded team members, streamlining the onboarding process and fostering a collaborative, high-performing team environment.</li>
                     </ul>
     
                     <div class="tools-tech">    
@@ -853,11 +852,8 @@
                 <div class="projects-grid">    
                     <div class="project-card">    
                         <div class="project-content">    
-                            <h3>Personal Finance Tracker</h3>    
-                            <p><strong>Description:</strong> Created a full-stack web application for managing income,    
-                                expenses, and budgets using Java Spring Boot, React.js, and MongoDB. Features include    
-                                secure authentication, dynamic data visualization, comprehensive budgeting tools, and a    
-                                responsive UI for an enhanced user experience.</p>    
+                            <h3>Provider Digital Security</h3>    
+                            <p><strong>Developed and implemented a robust digital security system for the UnitedHealthcare (UHC) Provider Portal, enabling authorization for over 1.4 million users and processing 1.2 billion+ transactions annually. The system protects sensitive data from unauthorized internal and external access while facilitating seamless user and provider interactions.</p>    
                             <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot, React.js,    
                                 MongoDB, Spring Security, JWT, RESTful APIs, Chart.js</div>    
                         </div>    
@@ -865,8 +861,8 @@
     
                     <div class="project-card">    
                         <div class="project-content">    
-                            <h3>Tax Calculation Service System</h3>    
-                            <p><strong>Description:</strong> Developed a comprehensive application enabling users to register, log in, and calculate their tax liabilities for the financial year.</p>    
+                            <h3>Enhanced Provider Validation (EPV) Portal</h3>    
+                            <p><strong>Description:</strong> Developed the Enhanced Provider Validation (EPV) portal, a web application for Out Of Network (OON) providers to register their Taxpayer Identification Number (TIN) and manage their credentialing information. This portal streamlines the process of validating and maintaining provider data, ensuring compliance and ease of use for healthcare providers.</p>    
                             <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot,    
                                 MongoDB, Spring Security, JWT, RESTful APIs</div>    
                         </div>    
