--- a/index.html
+++ b/index.html
@@ -822,10 +822,10 @@
                     <h3>Software Engineer <span><i class="fas fa-calendar-alt"></i> July 2022 – Present</span></h3>    
                     <div class="job-details"><i class="fas fa-map-marker-alt"></i> Optum Global Solutions (UHG) | Noida, Uttar Pradesh, India</div>    
                     <ul>
-                        <li>Enhanced API performance by 15\% through Kafka stream optimization and refinement of RESTful architecture, resulting in decreased latency and increased user throughput.</li>    
-                        <li>Resolved over 200 high-priority ServiceNow incidents, maintaining 99.9\% system uptime and strengthening security protocols within the Enhanced Provider Validation (EPV), Digital Security and Provider Helpdesk Portal.</li>
-                        <li>Engineered and integrated frontend and backend APIs for the Digital Security Helpdesk Portal using React.js, Abyss, and MongoDB, reducing ticket resolution time by 25\% and achieving 98\% test coverage with JUnit.</li>    
-                        <li>Implemented comprehensive production monitoring solutions utilizing Splunk, Kibana, NewRelic, and OpenLens, alongside automating database maintenance with cron jobs, which reduced downtime by 10\% and enhanced system stability.</li>  
+                        <li>Enhanced API performance by 15% through Kafka stream optimization and refinement of RESTful architecture, resulting in decreased latency and increased user throughput.</li>    
+                        <li>Resolved over 200 high-priority ServiceNow incidents, maintaining 99.9% system uptime and strengthening security protocols within the Enhanced Provider Validation (EPV), Digital Security and Provider Helpdesk Portal.</li>
+                        <li>Engineered and integrated frontend and backend APIs for the Digital Security Helpdesk Portal using React.js, Abyss, and MongoDB, reducing ticket resolution time by 25% and achieving 98\% test coverage with JUnit.</li>    
+                        <li>Implemented comprehensive production monitoring solutions utilizing Splunk, Kibana, NewRelic, and OpenLens, alongside automating database maintenance with cron jobs, which reduced downtime by 10% and enhanced system stability.</li>  
                         <li>Mentored new graduates and onboarded team members, streamlining the onboarding process and fostering a collaborative, high-performing team environment.</li>
                     </ul>
     
@@ -853,7 +853,7 @@
                     <div class="project-card">    
                         <div class="project-content">    
                             <h3>Provider Digital Security</h3>    
-                            <p><strong>Developed and implemented a robust digital security system for the UnitedHealthcare (UHC) Provider Portal, enabling authorization for over 1.4 million users and processing 1.2 billion+ transactions annually. The system protects sensitive data from unauthorized internal and external access while facilitating seamless user and provider interactions.</p>    
+                            <p><strong>Description:</strong> Developed and implemented a robust digital security system for the UnitedHealthcare (UHC) Provider Portal, enabling authorization for over 1.4 million users and processing 1.2 billion+ transactions annually. The system protects sensitive data from unauthorized internal and external access while facilitating seamless user and provider interactions.</p>    
                             <div class="project-tech"><strong>Key Technologies:</strong> Java Spring Boot, React.js,    
                                 MongoDB, Spring Security, JWT, RESTful APIs, Chart.js</div>    
                         </div>    
