--- a/index.html
+++ b/index.html
@@ -822,13 +822,12 @@
                     <h3>Software Engineer <span><i class="fas fa-calendar-alt"></i> July 2022 – Present</span></h3>    
                     <div class="job-details"><i class="fas fa-map-marker-alt"></i> Optum Global Solutions (UHG) | Noida, Uttar Pradesh, India</div>    
                     <ul>
-                        <li>Enhanced API performance by 15% through Kafka stream optimization and refinement of RESTful architecture, resulting in decreased latency and increased user throughput.</li>    
-                        <li>Resolved over 200 high-priority ServiceNow incidents, maintaining 99.9% system uptime and strengthening security protocols within the Enhanced Provider Validation (EPV), Digital Security and Provider Helpdesk Portal.</li>
-                        <li>Engineered and integrated frontend and backend APIs for the Digital Security Helpdesk Portal using React.js, Abyss, and MongoDB, reducing ticket resolution time by 25% and achieving 98\% test coverage with JUnit.</li>    
-                        <li>Implemented comprehensive production monitoring solutions utilizing Splunk, Kibana, NewRelic, and OpenLens, alongside automating database maintenance with cron jobs, which reduced downtime by 10% and enhanced system stability.</li>  
-                        <li>Mentored new graduates and onboarded team members, streamlining the onboarding process and fostering a collaborative, high-performing team environment.</li>
+                        <li><strong>Boosted API Performance:</strong> Achieved a <strong>15% improvement</strong> in API performance by optimizing Kafka streams and refining RESTful architecture, resulting in reduced latency and enhanced user throughput.</li>
+                        <li><strong>Incident Resolution Excellence:</strong> Resolved <strong>200+ high-priority ServiceNow incidents</strong>, ensuring <strong>99.9% system uptime</strong> while strengthening security protocols for Enhanced Provider Validation (EPV), Digital Security, and Provider Helpdesk Portals.</li>
+                        <li><strong>Full-Stack Development Impact:</strong> Designed and integrated <strong>frontend and backend APIs</strong> for the Digital Security Helpdesk Portal using <strong>React.js</strong>, <strong>Abyss</strong>, and <strong>MongoDB</strong>, cutting ticket resolution time by <strong>25%</strong> and achieving <strong>98% test coverage</strong> with <strong>JUnit</strong>.</li>
+                        <li><strong>Advanced Monitoring Solutions:</strong> Deployed production monitoring systems with <strong>Splunk</strong>, <strong>Kibana</strong>, <strong>New Relic</strong>, and <strong>OpenLens</strong>, alongside automating database maintenance with cron jobs, reducing downtime by <strong>10%</strong> and improving overall system stability.</li>
+                        <li><strong>Leadership & Team Building:</strong> Mentored new graduates and onboarded team members, streamlining the onboarding process and fostering a <strong>high-performing, collaborative team environment</strong>.</li>
                     </ul>
-    
                     <div class="tools-tech">    
                         <strong>Tools & Technologies:</strong> Java, Spring Boot, ReactJS, Abyss, GraphQL, JUnit, CodeQL, Splunk, Kibana, ServiceNow, MongoDB, Git, Jenkins, Kubernetes, JMeter    
                     </div>    
