--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
             <h2 class="section-title"><i class="fab fa-instagram"></i> Instagram</h2>
             <div class="instagram-profile">
                 <div class="profile-info">
-                    <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-pic">
+                    <img src="https://instagram.fixr3-2.fna.fbcdn.net/v/t51.2885-19/475040927_1330121768025622_2072490591380286040_n.jpg?stp=dst-jpg_s320x320_tt6&_nc_ht=instagram.fixr3-2.fna.fbcdn.net&_nc_cat=110&_nc_oc=Q6cZ2AEjmnYThmMr2i_Cw7s49uxMCPdTMygBA79IuSESUPQbabklKSg8N_3w6dOMKOGXlY3BZ1LrE14Oe8thyLzJlGfQ&_nc_ohc=K_Ow3LC1qI4Q7kNvgEWM0yO&_nc_gid=_0Qdd7_FEEMDQtI3FJBNBQ&edm=AOQ1c0wBAAAA&ccb=7-5&oh=00_AYEw8KGK2TsCPqLmigwQ_x65ynskzmZkUijJK2e0qVmAyA&oe=67DC56AF&_nc_sid=8b3546" alt="Profile Picture" class="profile-pic">
                     <div class="profile-details">
                         <h3>Shubham Kumar</h3>
                         <p>Indian 🟡 | 🟡 Pisces 🟡 | !!!!Tian 🟡</p>
